minor fix for z-index and overlays

--- a/src/App.scss
+++ b/src/App.scss
@@ -45,7 +45,7 @@ h2, ul {
     align-items: flex-end;
     overflow: visible;
     position: relative;
-    z-index: 1;
+    z-index: 100;
   }
 
   ul {
